# ipc

./: CMakeLists.txt
src/: client.cpp  daemon.cpp
